provision/roles/consent/files/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hydra-system
  labels:
    istio-injection: enabled
---
