provision/roles/consent/files/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: idp-gateway
  namespace: hydra-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-system
        protocol: HTTP
      hosts:
      - "example.hydra.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: example-idp
spec:
  hosts:
    - example.hydra.com
  gateways:
    - hydra-gateway.hydra-system
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 3000
            host: example-idp
